# algoritmes_sem3

./: README.md  funcs.hpp  lab17.cpp
lab1/: main.cpp
lab10/: main.cpp
lab11/: main.cpp
lab12/: lab12.py
lab12/src/: file2.txt  input.txt
lab13/: CMakeLists.txt  add.hpp  main.cpp
lab13/src/: input.txt
lab14/: CMakeLists.txt  add.hpp  main.cpp
lab14/src/: input.txt
lab15/: CMakeLists.txt  funcs.hpp  main.cpp
lab16/: CMakeLists.txt  funcs.hpp  main.cpp
lab17/: CMakeLists.txt  funcs.hpp  lab17.cpp
lab2/: lab2.py  main.cpp
lab3/: main.py
lab4/: main.cpp
lab5/: main.cpp
lab6/: main.cpp
lab7/: main.cpp
lab8/: main.cpp
lab9/: main.cpp
src/: file1.txt  file2.txt  input.txt
